--- a/ProjectStore-BE/Dockerfile
+++ b/ProjectStore-BE/Dockerfile
@@ -1,10 +1,16 @@
-# ===== STAGE 1: Build app =====
+# ===== STAGE 1: Build =====
 FROM maven:3.9.4-eclipse-temurin-17 AS build
 WORKDIR /app
-COPY . .
+
+COPY pom.xml .
+COPY mvnw .
+COPY .mvn .mvn
+RUN mvn dependency:go-offline
+
+COPY src src
 RUN mvn clean package -DskipTests
 
-# ===== STAGE 2: Run app =====
+# ===== STAGE 2: Run =====
 FROM eclipse-temurin:17-jre-jammy
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
