--- a/ProjectStore-BE/Dockerfile
+++ b/ProjectStore-BE/Dockerfile
@@ -1,13 +1,7 @@
 # ===== STAGE 1: Build =====
 FROM maven:3.9.4-eclipse-temurin-17 AS build
 WORKDIR /app
-
-COPY pom.xml .
-COPY mvnw .
-COPY .mvn .mvn
-RUN mvn dependency:go-offline
-
-COPY src src
+COPY . .
 RUN mvn clean package -DskipTests
 
 # ===== STAGE 2: Run =====
